  - pgm3: Automatic support for CUL_WS (S300TH) added

- Mon Dec 21 2009 (Rudi)
  - In order to support automatic device creation (coming 98_autocreate.pm),
    the return value in case of an undefined device should contain parameters
    for a correct define statement.

- Fri Jan  1 2010
  - my %defptr is no $modules{modname}{defptr} in order for CommandReload to
    work. There is also a second parameter $modules{modname}{ldata} which will
    be saved over a Reload, used by the FS20 for the follow feature.
  - ignore attribute added to ignore devices of the neighbour

- Fri Jan 8 2010 (MartinH)
    Interface to fhem changes to stream_socket_client. Table-format on
    Android-Browser optimized. Optimized for smartphones. Rooms possible for
    Webcam and Google-Weather.  Output of html better formated and skinable --
    change the colors.

- Sat  Feb 6 2010 (Boris)
  - feature: on-for-timer added for X10 modules and bug fixed for overlapping
    on-till and on-for-timer commands (Boris)
    
- Thu Jun 30 2011 (Maz Rashid)
  - Introducing 00_TUL.pm and 10_EIB.pm modules for connecting FHEM on EIB.
  
- Thu Aug 04 2011 (Boris)
  - enabled logging for 59_Weather.pm

- Thu Dec 01 2011 (Martin F.)
  - Move JsonList from contrib to main modules. Jsonlist output is optimized
    and now be more structured.

- Sun Jan 29 2012 (Maz Rashid)
  - Improving 10_EIB.pm by introducing Get and interpreting received value according 
    to the selected model (based on datapoint types.)
  - Introduced documentation for TUL / EIB modules.  

- Fr Feb 24 2012 (Willi)
  - New modules TRX for RFXCOM RFXtrx transceiver

- So May 20 2012 (M. Fischer)
  - Added support for a cleaner installation of pgm2 via updatefhem.

- Sa May 26 2012 (M. Fischer)
  - Added new command backup to separate this feature from updatefhem.

- Thu May 31 2012 (M. Fischer)
  - Added new global attribute <backupsymlink>

- Fri Jun 01 2012 (M. Fischer)
  - Added new global attribute <backupcmd>